--- a/cookserver/views/email/partials/header.hbs
+++ b/cookserver/views/email/partials/header.hbs
@@ -1,5 +1,5 @@
 <table width="100%" style="background:#333;color:#fff;padding:15px;">
   <tr>
-    <td><h2>welcome this your name in Header {{userName}}!</h2></td>
+    <td><h2>bu kisim headerdan geliyor yasasin {{userName}}!</h2></td>
   </tr>
 </table>
